Bug fix: On Mac OS X, the bottom of the extension preferences dialog is cut off (issue #9)

--- a/src/chrome/skin/all/options.css
+++ b/src/chrome/skin/all/options.css
@@ -35,6 +35,15 @@ prefwindow > .paneDeckContainer {
   overflow: visible;
 }
 
+prefwindow[animated="true"] #pane-general {
+  height: 24em;
+}
+
+prefwindow[animated="true"] #pane-customize {
+  height: 18em;
+}
+
+
 prefpane description {
   font: message-box;
 }
@@ -58,6 +67,10 @@ separator.very-thin {
 .ae-group-box {
   -moz-box-flex: 1;
   margin-left: 1.0em;
+}
+
+.indent {
+  margin-left: 2.5em;
 }
 
 #panicbutton-action-detail {
